# btg-desafio

./: README.md  Tests.ipynb  main.py  poetry.lock.bkp  pyproject.toml
